<resources>
    <string name="app_name">ShadiApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading...</string>
    <string name="name">Name:</string>
    <string name="gender">Gender :</string>
    <string name="age">Age :</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
</resources>